--- a/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
+++ b/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="xyz.leet.translator.app.views.TranslatorView">
@@ -15,10 +14,10 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="translateButton" layoutX="522.0" layoutY="332.0" mnemonicParsing="false" onAction="#onButtonPress" text="Translate" />
-                  <TextArea fx:id="textArea" layoutX="8.0" layoutY="7.0" prefHeight="325.0" prefWidth="342.0" />
-                  <TextField fx:id="textField" layoutX="8.0" layoutY="332.0" prefHeight="25.0" prefWidth="238.0" />
-                  <ComboBox fx:id="comboBox" layoutX="245.0" layoutY="332.0" prefHeight="25.0" prefWidth="105.0" />
+                   <Button fx:id="translateButton" layoutX="305.0" layoutY="335.0" mnemonicParsing="false" onAction="#onButtonPress" text="Translate" prefWidth="115.0"/>
+                   <TextArea fx:id="textInput" layoutX="8.0" layoutY="8.0" prefHeight="325.0" prefWidth="262.0"/>
+                   <TextArea fx:id="textOutput" layoutX="326.0" layoutY="8.0" prefHeight="325.0" prefWidth="262.0" />
+                   <ComboBox fx:id="comboBox" layoutX="180.0" layoutY="335.0" prefHeight="25.0" prefWidth="115.0" />
                </children></AnchorPane>
       </content>
     </Tab>
