--- a/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
+++ b/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
@@ -15,7 +15,7 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                    <Button fx:id="translateButton" layoutX="473.0" layoutY="335.0" mnemonicParsing="false" onAction="#onButtonPress" prefWidth="115.0" text="Translate" />
-                   <TextArea fx:id="textInput" layoutX="8.0" layoutY="8.0" prefHeight="325.0" prefWidth="262.0" promptText="To translated text...." />
+                   <TextArea fx:id="textInput" layoutX="8.0" layoutY="8.0" prefHeight="325.0" prefWidth="262.0" promptText="Text to translate...." />
                    <TextArea fx:id="textOutput" layoutX="326.0" layoutY="8.0" prefHeight="325.0" prefWidth="262.0" promptText="Translated text...." />
                    <ComboBox fx:id="comboBox" layoutX="155.0" layoutY="335.0" prefHeight="25.0" prefWidth="115.0" />
                </children></AnchorPane>
