--- a/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
+++ b/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
@@ -25,7 +25,10 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Label layoutX="14.0" prefHeight="33.0" prefWidth="215.0" text="You are gay" />
+                   <Label layoutX="275.0" layoutY="150" prefHeight="33.0" prefWidth="215.0" text="Redaam" textAlignment="CENTER" />
+                  <Label layoutX="270.0" layoutY="50" prefHeight="33.0" prefWidth="215.0" text="olijeffers0n" textAlignment="CENTER" />
+                  <Label layoutX="250.0" layoutY="100" prefHeight="33.0" prefWidth="215.0" text="GodCipher - (OCD)" textAlignment="CENTER" />
+                  <Label layoutX="270.0" layoutY="200" prefHeight="33.0" prefWidth="215.0" text="DeadSpark" textAlignment="CENTER" />
                </children></AnchorPane>
       </content>
     </Tab>
