--- a/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
+++ b/src/main/resources/xyz/leet/translator/app/views/TranslatorView.fxml
@@ -25,10 +25,10 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                   <Label layoutX="275.0" layoutY="150" prefHeight="33.0" prefWidth="215.0" text="Redaam" textAlignment="CENTER" />
-                  <Label layoutX="270.0" layoutY="50" prefHeight="33.0" prefWidth="215.0" text="olijeffers0n" textAlignment="CENTER" />
-                  <Label layoutX="250.0" layoutY="100" prefHeight="33.0" prefWidth="215.0" text="GodCipher - (OCD)" textAlignment="CENTER" />
-                  <Label layoutX="270.0" layoutY="200" prefHeight="33.0" prefWidth="215.0" text="DeadSpark" textAlignment="CENTER" />
+                   <Label layoutX="251.0" layoutY="153.0" prefHeight="33.0" prefWidth="215.0" text="Redaam (1337)" textAlignment="CENTER" />
+                  <Label layoutX="251.0" layoutY="51.0" prefHeight="33.0" prefWidth="215.0" text="GodCipher (CEO)" textAlignment="CENTER" />
+                  <Label layoutX="251.0" layoutY="99.0" prefHeight="33.0" prefWidth="215.0" text="olijeffers0n (POG)" textAlignment="CENTER" />
+                  <Label layoutX="251.0" layoutY="203.0" prefHeight="33.0" prefWidth="215.0" text="DeadSpark (DEAD)" textAlignment="CENTER" />
                </children></AnchorPane>
       </content>
     </Tab>
